# factorio-better-reporter-agent

./: .dockerignore  .editorconfig  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE  Makefile.toml  README.md  changelog.txt
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
.theia/: launch.json  tasks.json
src/: chat.rs  connection.rs  general.rs  lib.rs  main.rs
wix/: main.wxs
