[package]
name = "better-reporter-agent"
version = "0.3.0"
authors = ["oqch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.228"
serde_json = "1.0.146"
serde_repr = "0.1.20"
serde_derive = "1.0.145"
clap = "4.5.53"
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }

notify = "8.0.0"
notify-debouncer-mini = { version = "0.6.0" }
